# num-methods

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.org  plot_csv.m
04/: CMakeLists.txt  config.h  integrate.cc  methods.h
05/: CMakeLists.txt  config.h  functions.h  loggers.h  methods.h  ode.cc
cmake/: compile_options.cmake
cmake/toolchains/: clang.cmake  gcc.cmake
hw1/: CMakeLists.txt  README.org
hw1/include/uni/math/: math.hpp  matrix.hpp  numbers.hpp  optimization.hpp  sle.hpp
hw1/src/: main.cc
include/: algebra.h  types.h  utils.h
lib/: CMakeLists.txt
lib/algebra/: CMakeLists.txt  matrix.cc  matrix.h  polynomial.h  sle.cc  sle.h
lib/core/: compare.h  utils.h
minimize/: CMakeLists.txt  minimize.cc
tests/: CMakeLists.txt  algebra.specs.cc
vendors/: CMakeLists.txt
